if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    if (APPLE)
        add_executable(forcepad3d main.cpp forcepad_window.cpp forcepad_window.h)
        target_include_directories(forcepad3d PRIVATE ${gui_INCLUDE_DIRS} ${raylib_INCLUDE_DIRS})
        target_link_libraries(forcepad3d PRIVATE "-framework CoreGraphics" "-framework Cocoa" "-framework IOKit" "-framework OpenGL" "-framework CoreFoundation" rlimguid guid graphicsd ${raylib_LIBRARIES} OpenGL::GL imgui::imgui glfw)
        #add_dependencies(forcepad3d guid)
    else()
        add_executable(forcepad3d main.cpp forcepad_window.cpp forcepad_window.h)
        target_include_directories(forcepad3d PRIVATE ${gui_INCLUDE_DIRS} ${raylib_INCLUDE_DIRS})
        target_link_libraries(forcepad3d PRIVATE rlimguid guid graphicsd ${raylib_LIBRARIES} OpenGL::GL imgui::imgui)
        #add_dependencies(forcepad3d guid)
    endif()
else()
    add_executable(forcepad3 main.cpp forcepad_window.cpp forcepad_window.h)
    target_include_directories(forcepad3 PRIVATE ${gui_INCLUDE_DIRS} ${raylib_INCLUDE_DIRS})
    target_link_libraries(forcepad3 PRIVATE rlimgui gui graphics ${raylib_LIBRARIES} OpenGL::GL imgui::imgui) 
    #add_dependencies(forcepad3d gui)
endif()