INCLUDE_DIRECTORIES(${forcepad3_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${forcepad3_SOURCE_DIR}/include/graphics/*.h)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_library(graphicsd ${INCLUDE_FILES} ${SOURCE_FILES})
    target_include_directories(graphicsd PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(graphicsd PRIVATE ${raylib_LIBRARIES})
    install_targets(/lib graphicsd)
else()
    add_library(graphics ${INCLUDE_FILES} ${SOURCE_FILES})
    target_include_directories(graphics PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(graphics PRIVATE ${raylib_LIBRARIES})
    install_targets(/lib graphics)
endif()  
