INCLUDE_DIRECTORIES(${forcepad3_SOURCE_DIR}/include)
FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES ${forcepad3_SOURCE_DIR}/include/gui/*.h)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_library(guid ${INCLUDE_FILES} ${SOURCE_FILES})
    target_include_directories(guid PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(guid PRIVATE ${raylib_LIBRARIES} imgui::imgui)
    install_targets(/lib guid)
else()
    add_library(gui ${INCLUDE_FILES} ${SOURCE_FILES})
    target_include_directories(gui PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(gui PRIVATE ${raylib_LIBRARIES} imgui::imgui)
    install_targets(/lib gui)
endif()  
