include_directories(${forcepad3_SOURCE_DIR}/include ${forcepad3_SOURCE_DIR}/include/rlimgui)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB INCLUDE_FILES ${forcepad3_SOURCE_DIR}/include/rlimgui/*.h)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_library(rlimguid ${INCLUDE_FILES} ${SOURCE_FILES})
    set_target_properties(rlimguid PROPERTIES LINKER_LANGUAGE CXX)
    target_include_directories(rlimguid PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(rlimguid PRIVATE ${raylib_LIBRARIES})
    install_targets(/lib rlimguid)
else()
    add_library(rlimgui ${INCLUDE_FILES} ${SOURCE_FILES})
    set_target_properties(rlimgui PROPERTIES LINKER_LANGUAGE CXX)
    target_include_directories(rlimgui PRIVATE ${raylib_INCLUDE_DIRS})
    target_link_libraries(rlimgui PRIVATE ${raylib_LIBRARIES})
    install_targets(/lib rlimgui)
endif()  
